tests/paczka1/small_fuzzy/43100537.err
Error in line 1: A744 S881 43,7
Error in line 3: jL3LU3T A744 31,5
Error in line 11: CGbgtlC7x S881 50,5
Error in line 16: A744 S955 98,72
